# engawa

./: .claudeignore  .cursorrules  .gitignore  .pylintrc  .tmuxinator.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
api/: .gitignore  .pylintrc  LICENSE.txt  README.md  hatch.toml  plex.xml  pyproject.toml  pyrightconfig.json
api/app/: config.py  filters.py  main.py  plex_parsing.py  scheduler.py  utils.py  youtube_parsing.py  yt_downloader.py
api/app/database/: session.py
api/app/models/: filters.py  plex.py  subscription.py  youtube.py
api/app/routers/: mapping.py  plex.py  router.py  settings.py  subscription.py  youtube.py
api/help/: README.md  debugging.md  launch.json
api/src/engawa/: __init__.py
api/src/engawa/api/: api.py  plex_service.py
api/src/engawa/model/: model.py
api/src/engawa/plex/: parsing.py
api/tests/: test_add_subscription_v2.py  test_filters.py  test_get_metadata.py  test_model.py  test_plex_response_parsing.py  test_rss_parsing.py  test_scheduler.py  test_sub_v2.py  test_youtube_feed_parsing.py  test_yt_downloader.py
api/tests/resources/: libraries.json  parsed_videos.json  videos.xml
src/engawa/: __about__.py
src/engawa/api/: api.py
src/engawa/model/: model.py
tests/: test_plex_response_parsing.py  test_rss_parsing.py
tests/resources/: libraries.xml
ui/: .prettierrc  .swcrc  babel.config.js  eslint.config.js  eslint.config.mjs  jest.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
ui/.storybook/: preview.ts
ui/src/actions/: savePlexServer.ts
ui/src/api/: README.md  runtime.ts
ui/src/api/apis/: PlexApi.ts  SettingsApi.ts  SubscriptionApi.ts  YoutubeApi.ts  index.ts
ui/src/api/models/: ChannelInfo.ts  ComparisonOperator.ts  DirectoryPublic.ts  ErrorState.ts  Filter.ts  FilterType.ts  HTTPValidationError.ts  LocationPublic.ts  MetadataErrorType.ts  PlexLibraryDestination.ts  PlexPublicWithDirectories.ts  PlexServerCreate.ts  RequirementStatus.ts  RequirementsCheckResult.ts  RetentionPolicyModel.ts  RetentionType.ts  Subscription.ts  SubscriptionCreate.ts  SubscriptionCreateV2.ts  SubscriptionDirectoryError.ts  SubscriptionType.ts  ValidationError.ts  ValidationErrorLocInner.ts  Video.ts  VideoStatus.ts  index.ts
ui/src/app/: StyledRoot.tsx  globals.css  layout.tsx  navigation.tsx  page.tsx  theme.ts
ui/src/app/card/: page.tsx
ui/src/app/plex/: page.tsx
ui/src/app/settings/: page.tsx
ui/src/app/sub2/: page.tsx
ui/src/app/subscriptions/: page.tsx
ui/src/app/subscriptions2/: page.tsx
ui/src/app/youtube/: VideoCard.tsx  YoutubeCardFetcher.tsx  YoutubeLink.tsx  YoutubeLinkFetcher.test.tsx  YoutubeLinkFetcher.tsx  urlUtils.test.tsx  urlUtils.tsx
ui/src/components/: AddSubscription.tsx  AddSubscription2.tsx  AddSubscriptionForm.tsx  AddSubscriptionForm2.tsx  Card.tsx  DownloadToPicker.stories.tsx  DownloadToPicker.tsx  FilterStep.stories.tsx  FilterStep.tsx  JsonMocking.tsx  PlexServerDashboard.tsx  RequirementsCheck.tsx  ResetConfirmationDialog.tsx  RetentionPolicy.tsx  RetentionPolicyStep.tsx  SubscriptionContext.tsx  SubscriptionList.tsx  SubscriptionListFetcher.tsx  SubscriptionSummary.tsx  SubscriptionVideos.test.tsx  SubscriptionVideos.tsx  YoutubeCardFetcher.tsx  YoutubeLink.tsx  YoutubeLinkFetcher.test.tsx  YoutubeLinkFetcher.tsx  subvids.tsx
ui/src/css/: subscriptions.css
ui/src/types/: plexTypes.ts  subscriptionTypes.ts  videoTypes.ts
ui/src/utilities/: urlUtils.test.tsx
