[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engawa"
dynamic = ["version"]
description = 'A companion service to pair with the Plex media server that allows for simulating YouTube subscriptions.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bryan Thode", email = "bryan@tatq.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "fastapi~=0.111.0",
    "black~=24.4.0",
    "pytest~=8.2.0",
    "ruff~=0.4.0",
    "pyright~=1.1.0",
    "cryptography~=42.0.0",
]

[project.urls]
repository = "https://github.com/bthode/engawa"
issue_tracker = "https://github.com/bthode/engawa/issues"

[tool.coverage.run]
source_pkgs = ["engawa", "tests"]
branch = true
parallel = true
omit = [
  "src/engawa/__about__.py",
]

[tool.coverage.paths]
engawa = ["src/engawa", "*/engawa/src/engawa"]
tests = ["tests", "*/engawa/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py310']
