[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engawa"
dynamic = ["version"]
description = 'A companion service to pair with the Plex media server that allows for simulating YouTube subscriptions.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bryan Thode", email = "bryan@tatq.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "beautifulsoup4~=4.12.3",
    "black~=24.4.0",
    "cryptography~=42.0.0",
    "fastapi~=0.111.0",
    "pydantic~=2.7.1",
    "pyright~=1.1.0",
    "pytest~=8.2.0",
    "requests~=2.31.0",
    "ruff~=0.4.0",
    "schedule~=1.2.1",
    "SQLAlchemy~=2.0.30",
    "uvicorn~=0.29.0",
    "yt-dlp-types~=0.0.7",
    "yt-dlp~=2024.4.0",
]

[project.urls]
repository = "https://github.com/bthode/engawa"
issue_tracker = "https://github.com/bthode/engawa/issues"

[tool.coverage.run]
source_pkgs = ["engawa", "tests"]
branch = true
parallel = true
omit = [
  "src/engawa/__about__.py",
]

[tool.coverage.paths]
engawa = ["src/engawa", "*/engawa/src/engawa"]
tests = ["tests", "*/engawa/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py310']
