[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engawa"
dynamic = ["version"]
description = 'A companion service to pair with the Plex media server that allows for simulating YouTube subscriptions.'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "Bryan Thode", email = "bryan@tatq.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "aiocache[memcached]~=0.12.3",
    "aiocache~=0.12.3",
    "aiofiles~=0.8.0",
    "aiosqlite~=0.20.0",
    "APScheduler~=3.10.4",
    "beautifulsoup4~=4.12.3",
    "black~=24.8.0",
    "cryptography~=43.0.1",
    "debugpy~=1.8.5",
    "fastapi~=0.114.0",
    "greenlet~=3.1.0",
    "httpx!=0.27.2",
    "lxml~=5.3.0",
    "plex-api-client~=0.18.1",
    "pydantic~=2.9.1",
    "pyright~=1.1.380",
    "pytest-asyncio~=0.24.0",
    "pytest-cov~=5.0.0",
    "pytest-watcher~=0.4.2",
    "pytest~=8.3.3",
    "result~=0.17.0",
    "ruff~=0.6.4",
    "schedule~=1.2.2",
    "SQLAlchemy~=2.0.34",
    "sqlmodel~=0.0.22",
    "types-beautifulsoup4~=4.12",
    "types-lxml~=2024.9.16",
    "uvicorn~=0.30.6",
    "yt-dlp-types~=0.0.7",
    "yt-dlp~=2024.8.6",
]

# https://youtrack.jetbrains.com/issue/PY-60410
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[project.urls]
repository = "https://github.com/bthode/engawa"
issue_tracker = "https://github.com/bthode/engawa/issues"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_fixture_loop_scope = "fixture"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
console_output_style = "count"

[tool.coverage.run]
source_pkgs = ["engawa", "tests"]
branch = true
parallel = true
omit = [
  "src/engawa/__about__.py",
]

[tool.coverage.paths]
engawa = ["src/engawa", "*/engawa/src/engawa"]
tests = ["tests", "*/engawa/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == '__main__':",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
target-version = "py312"
lint.select = ["UP"]
lint.extend-select = ["I"] # Reorder imports
preview = true
